src/styles/App.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

@font-face {
  font-family: SaolDisplay;
  src: url(fonts/SaolDisplay-Light.woff2) format("woff2"),
    url(fonts/SaolDisplay-Light.ttf) format("truetype");
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: NittiGrotesk;
  src: url(fonts/NittiGrotesk-Medium.woff2) format("woff2"),
    url(fonts/NittiGrotesk-Medium.ttf) format("truetype");
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: NittiGrotesk-Light;
  src: url(fonts/NittiGrotesk-Light.woff2) format("woff2"),
    url(fonts/NittiGrotesk-Light.ttf) format("truetype");
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: Kalameh;
  src: url(/src/fonts/Shabnam.ttf) format("truetype");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

@media (prefers-reduced-motion: no-preference) {
  :root {
    scroll-behavior: smooth;
    --white: #fff;
    --hero-text: #263238;
    --grey-lighten-3: #eeeeee;
    --grey-darken-1: #757575;
    --grey-darken-2: #616161;
    --grey-darken-3: #424242;
    --grey-lighten: linear-gradient(
      to bottom,
      rgba(238, 238, 238, 0) 69%,
      #a7a8aa
    );
  }
}

#root {
  overflow: hidden;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: #bebebe;
  -webkit-text-size-adjust: 100%;
  background-color: #a7a8aa;
  height: 100vh;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.container {
  margin: 0 auto;
  max-width: 1840px;
}

.row {
  display: flex;
}

.grid {
  display: grid;
}

.flex-column {
  flex-direction: column;
}

.wrap {
  flex-wrap: wrap;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.justify-space-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.justify-start {
  justify-content: flex-start;
}

.justify-end {
  justify-content: flex-end;
}

.align-center {
  align-items: center;
}

.align-start {
  align-items: flex-start;
}

.align-end {
  align-items: flex-end;
}

.button-container {
  display: flex;
  position: relative;
  height: 85px;
  width: 200px;
  align-items: center;
}

.line {
  overflow: hidden;
  line-height: initial;
}

.reveal-cover {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  background-color: var(--white);
}

.border-overlay {
  border-top-left-radius: 100vw;
  border-top-right-radius: 100vw;
}

.border-overlay .reveal-cover {
  border-top-left-radius: 100vw;
  border-top-right-radius: 100vw;
}

.border-overlay img {
  border-top-left-radius: 100vw;
  border-top-right-radius: 100vw;
}

.home-footer {
  background-color: var(--grey-darken-3);
}

@media screen and (max-width: 575px) {
  .d-mobile-none {
    display: none;
  }

  .d-mobile-flex {
    display: flex;
  }
}

